# pyNNS

./: .gitignore  AGENT.md  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: api_status.md  benchmarks.md  conventions.md  deferred_paths.md  export_surface.md
docs/examples/: README.md  classification.md  classification.py  dependence.md  dependence.py  distributions_anova.md  distributions_anova.py  forecasting.md  forecasting.py  nowcast_panel.md  nowcast_panel.py  partial_moments.md  partial_moments.py  regression.md  regression.py
scripts/: fetch_sp500_fixture.py  update_benchmarks_doc.py
src/pynns/: __init__.py  _helpers.py  anova.py  arma.py  boost.py  categorical.py  causation.py  cdf.py  central_tendencies.py  classical.py  co_moments.py  copula.py  core.py  dependence.py  diff.py  distance.py  mc.py  meboot.py  multivariate_regression.py  norm.py  nowcast.py  part.py  pm_matrix.py  regression.py  seasonality.py  smoothing.py  stack.py  stochastic_dominance.py  stochastic_superiority.py  var.py
src/pynns/providers/: __init__.py  nowcast.py
tests/: _r.py  _r_cache.json  _tolerances.py  conftest.py
tests/benchmarks/: _r_baseline.json  test_lpm.py  test_stochastic_dominance_realistic.py
tests/fixtures/finance/: sp500_daily_returns_2019_2023.csv  sp500_daily_returns_2019_2023_metadata.json
tests/invariants/: test_anova.py  test_arma.py  test_boost.py  test_causation.py  test_cdf.py  test_classical.py  test_co_moments.py  test_copula.py  test_core.py  test_deferred_paths.py  test_dependence.py  test_diff.py  test_distance.py  test_edge_cases_smoke.py  test_examples.py  test_export_surface.py  test_invariant_smoke.py  test_mc.py  test_meboot.py  test_multivariate_regression.py  test_norm.py  test_nowcast.py  test_part.py  test_pm_matrix.py  test_regression.py  test_regression_helpers.py  test_sampling.py  test_sd_cluster.py  test_seasonality.py  test_stack.py  test_stochastic_dominance.py  test_stochastic_superiority.py  test_var.py
tests/parity/: test_anova.py  test_arma.py  test_boost.py  test_categorical.py  test_causation.py  test_cdf.py  test_classical.py  test_co_moments.py  test_copula.py  test_core.py  test_dependence.py  test_diff.py  test_distance.py  test_lpm_smoke.py  test_mc.py  test_meboot.py  test_multivariate_regression.py  test_norm.py  test_part.py  test_partial_moments_smoke.py  test_pm_matrix.py  test_public_wrappers.py  test_regression.py  test_regression_helpers.py  test_sd_cluster.py  test_seasonality.py  test_stack.py  test_stochastic_dominance.py  test_stochastic_superiority.py  test_var.py
tests/property/: test_anova.py  test_arma.py  test_boost.py  test_causation.py  test_cdf.py  test_classical.py  test_co_moments.py  test_copula.py  test_core.py  test_dependence.py  test_diff.py  test_distance.py  test_mc.py  test_meboot.py  test_multivariate_regression.py  test_norm.py  test_part.py  test_pm_matrix.py  test_property_smoke.py  test_regression.py  test_regression_helpers.py  test_sd_cluster.py  test_seasonality.py  test_stack.py  test_stochastic_dominance.py  test_stochastic_superiority.py
