[project]
name = "nns-pm"
version = "0.1.1"
description = "Python port of nonlinear nonparametric statistics from R NNS"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-only"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
keywords = [
    "statistics",
    "nonparametric",
    "partial moments",
    "regression",
    "forecasting",
    "nns",
]
urls = { "Homepage" = "https://github.com/rasheed/pynns", "Repository" = "https://github.com/rasheed/pynns", "Issues" = "https://github.com/rasheed/pynns/issues", "Source" = "https://github.com/rasheed/pynns", "Project" = "https://github.com/rasheed/pynns" }
dependencies = [
    "numpy",
    "polars",
    "scipy",
]

[project.optional-dependencies]
fred = ["fredapi"]

[dependency-groups]
dev = [
    "hypothesis",
    "mypy",
    "pytest",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-xdist>=3.8.0",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pynns"]

[tool.hatch.build.targets.sdist]
include = [
    "/LICENSE",
    "/README.md",
    "/docs/api_status.md",
    "/docs/benchmarks.md",
    "/docs/conventions.md",
    "/docs/examples",
    "/pyproject.toml",
    "/src",
]

[tool.pytest.ini_options]
addopts = "-ra -m 'not benchmark' --benchmark-disable -n 4"
pythonpath = ["tests"]
testpaths = ["tests"]
markers = [
    "benchmark: performance benchmarks excluded from the default test run",
    "parity: tests comparing pynns behavior to the reference R NNS package",
    "invariant: tests for mathematical or API invariants",
    "property: property-based tests",
    "stochastic: stochastic structural/statistical tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF", "TID"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"subprocess" = { msg = "Do not call subprocess from pynns implementation code. Keep R parity calls in tests/_r.py." }
"rpy2" = { msg = "Do not use rpy2 from pynns implementation code. Keep R parity calls outside the package." }

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["TID251"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/pynns", "tests"]
mypy_path = ["tests"]
